# postBot

./: .gitignore  LICENSE  README.md  config.ini  config.json  config.py  data.py  main.py  my_account.session  posts.json  pyproject.toml  requirements.txt  sender.session
